--- a/src/App.css
+++ b/src/App.css
@@ -126,10 +126,11 @@ body{
     margin-left: 0px !important;
   }
   .inputbox{
-    width: 340px ;
+    width: 335px ;
   }
   .homecon{
     width: 100% !important;
+    margin-top: 50px !important;
   }
   .inputbtns{
     display: none !important;
@@ -152,7 +153,6 @@ body{
   .messageboxxx{
     margin-left: 0px !important;
     width: 98% !important;
-      margin-top: 50px;
   }
   .messagecontent{
     padding-right: 20px !important;
